--- a/PDS Info Update/Posting.html
+++ b/PDS Info Update/Posting.html
@@ -361,7 +361,7 @@
               <div class="card-body">
                 <div class="card-title">
                   <h4
-                    class="mb-4 text-dark text-center text-decoration-underline"
+                    class="mb-4 text-dark text-center "
                   >
                     Posting Records:
                   </h4>
@@ -424,6 +424,7 @@
                         >
                           Edit
                         </button>
+                       
                       </td>
                     </tr>
                   </tbody>
@@ -540,7 +541,7 @@
                         </div>
 
                         <div class="col-md-12 text-center mb-2">
-                          <button type="submit" class="btn btn-success">
+                          <button type="submit" class="btn btn-success py-0">
                             Save
                           </button>
                         </div>
