--- a/PDS Info Update/Leave History.html
+++ b/PDS Info Update/Leave History.html
@@ -75,13 +75,21 @@
                   <div class="accordion-body">
                     <ul>
                       <li><a href="/Reports/Short PDS.html">Short PDS</a></li>
-                      <li><a href="/Reports/PDS Printing.html">PDS Printing</a></li>
                       <li>
-                        <a href="/Reports/Search Officers.html">Search Officers</a>
+                        <a href="/Reports/PDS Printing.html">PDS Printing</a>
                       </li>
-                      <li><a href="/Reports/Search Staffs.html">Search Staffs</a></li>
                       <li>
-                        <a href="/Reports/Grade 9 & Above.html">Grade 9 & Above</a>
+                        <a href="/Reports/Search Officers.html"
+                          >Search Officers</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/Reports/Search Staffs.html">Search Staffs</a>
+                      </li>
+                      <li>
+                        <a href="/Reports/Grade 9 & Above.html"
+                          >Grade 9 & Above</a
+                        >
                       </li>
                       <li>
                         <a href="/Reports/Sub-Assistant Engineers.html"
@@ -89,15 +97,23 @@
                         >
                       </li>
                       <li>
-                        <a href="/Reports/Class 3 Employee.html">Class 3 Employees</a>
+                        <a href="/Reports/Class 3 Employee.html"
+                          >Class 3 Employees</a
+                        >
                       </li>
                       <li>
-                        <a href="/Reports/Class 4 Employee.html">Class 4 Employees</a>
+                        <a href="/Reports/Class 4 Employee.html"
+                          >Class 4 Employees</a
+                        >
                       </li>
                       <li>
-                        <a href="/Reports/Current Posting.html">Current Postings</a>
+                        <a href="/Reports/Current Posting.html"
+                          >Current Postings</a
+                        >
                       </li>
-                      <li><a href="/Reports/Posting Date.html">Posting Date</a></li>
+                      <li>
+                        <a href="/Reports/Posting Date.html">Posting Date</a>
+                      </li>
 
                       <li>
                         <a href="/Reports/Vacant Post Officers.html"
@@ -115,7 +131,9 @@
                         >
                       </li>
                       <li>
-                        <a href="/Reports/Officer In Lien.html">Officers on Lien</a>
+                        <a href="/Reports/Officer In Lien.html"
+                          >Officers on Lien</a
+                        >
                       </li>
                       <li>
                         <a href="/Reports/Officer In Reserve.html"
@@ -128,13 +146,23 @@
                         >
                       </li>
                       <li>
-                        <a href="/Reports/Officer On Leave.html">Officers on Leave</a>
+                        <a href="/Reports/Officer On Leave.html"
+                          >Officers on Leave</a
+                        >
                       </li>
                       <li>
-                        <a href="/Reports/PRL Dates.html">PRL Dates of Officers</a>
+                        <a href="/Reports/PRL Dates.html"
+                          >PRL Dates of Officers</a
+                        >
                       </li>
-                      <li><a href="/Reports/Employee Added.html">Employee Added</a></li>
-                      <li><a href="/Reports/PDS Update.html">PDS Update List</a></li>
+                      <li>
+                        <a href="/Reports/Employee Added.html"
+                          >Employee Added</a
+                        >
+                      </li>
+                      <li>
+                        <a href="/Reports/PDS Update.html">PDS Update List</a>
+                      </li>
                       <li>
                         <a href="/Reports/Foreign Travel Report.html"
                           >Foreign Travel Reports</a
@@ -192,7 +220,7 @@
                       <li>
                         <a href="Previous Services.html">Previous Services</a>
                       </li>
-                     <li>
+                      <li>
                         <a href="Official Info.html">Official Information</a>
                       </li>
                       <li>
@@ -209,8 +237,10 @@
                       <li><a href="Leave History.html">leave History</a></li>
                       <li><a href="Posting.html">Posting</a></li>
                       <li><a href="Lien Info.html">Lien Info.</a></li>
-                       <li><a href="Job Status.html">Job Status</a></li>
-                      <li><a href="Change Password.html">Change Password</a></li>
+                      <li><a href="Job Status.html">Job Status</a></li>
+                      <li>
+                        <a href="Change Password.html">Change Password</a>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -241,7 +271,7 @@
                 >
                   <div class="accordion-body">
                     <ul>
-                     <li>
+                      <li>
                         <a href="/Setup/User Administration.html"
                           >User Administration</a
                         >
@@ -258,19 +288,27 @@
                       <li><a href="/Setup/BCS Batches.html">BCS Batches</a></li>
                       <li><a href="/Setup/PayScales.html">Payscale</a></li>
                       <li>
-                        <a href="/Setup/Academic Degree.html">Academic Degree</a>
+                        <a href="/Setup/Academic Degree.html"
+                          >Academic Degree</a
+                        >
                       </li>
                       <li>
                         <a href="/Setup/Major Subjects.html">Major Subject</a>
                       </li>
                       <li>
-                        <a href="/Setup/Create Institutes.html">Create institute</a>
+                        <a href="/Setup/Create Institutes.html"
+                          >Create institute</a
+                        >
                       </li>
                       <li>
-                        <a href="/Setup/Training Topics.html">Training Topics</a>
+                        <a href="/Setup/Training Topics.html"
+                          >Training Topics</a
+                        >
                       </li>
-                       <li>
-                        <a href="/Setup/Training Sponsors.html">Training Sponsors</a>
+                      <li>
+                        <a href="/Setup/Training Sponsors.html"
+                          >Training Sponsors</a
+                        >
                       </li>
                       <li><a href="/Setup/Affiliations.html">Affliation</a></li>
                       <li>
@@ -290,12 +328,14 @@
                         >
                       </li>
                       <li>
-                        <a href="/Setup/Mark Retired Class 1 Freedom Fighter.html"
+                        <a
+                          href="/Setup/Mark Retired Class 1 Freedom Fighter.html"
                           >Mark Retired (Class 1) (Freedom Fighter)</a
                         >
                       </li>
                       <li>
-                        <a href="/Setup/Mark Retired Class 2 Freedom Fighter.html"
+                        <a
+                          href="/Setup/Mark Retired Class 2 Freedom Fighter.html"
                           >Mark Retired (Class 2) (Freedom Fighter)</a
                         >
                       </li>
@@ -529,11 +569,6 @@
       </footer>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
     <!--plugins-->
     <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/plugins/simplebar/js/simplebar.min.js"></script>
